<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_GameLevel"
    android:background="@drawable/memo_up_background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/headline_TXT_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/board_size"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"/>

    <LinearLayout
        android:id="@+id/boardSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/boardSize_BTN_4"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            app:background="@drawable/memo_up_card_background"
            android:gravity="center"
            android:text="@string/_4x4"
            android:textSize="20sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/boardSize_BTN_5"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            app:background="@drawable/memo_up_card_background"
            android:gravity="center"
            android:text="@string/_5x5"
            android:textSize="20sp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/boardSize_BTN_6"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            app:background="@drawable/memo_up_card_background"
            android:gravity="center"
            android:text="@string/_6x6"
            android:textSize="20sp"/>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/creator_TXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/by_beast_games_ltd"
        android:paddingBottom="10dp"
        android:textSize="15sp"/>

</RelativeLayout>